# subtiltes-translator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py
src/subtiltes_translator/: gemini.py  utils.py
