[project]
name = "subtiltes-translator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Kevin Lee", email = "363344+ipfans@users.noreply.github.com" },
]
dependencies = [
    "ass>=0.5.4",
    "flet[all]>=0.27.5",
    "google-generativeai>=0.8.2",
    "srt>=3.5.3",
    "pysubs2>=1.8.0",
]
requires-python = ">=3.12.0,<3.15.0"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.ruff]
max_line_length = 120
target_version = "py313"
fix = true
